h1. CHANGELOG

h2. 2.2.23 December 14, 2012

* use 'figaro' gem instead of 'local_env.yml' file to set local environment variables

h2. 2.2.22 December 11, 2012

* option to use 'local_env.yml' file to set local environment variables
* fix 'extras' recipe to remove 'run rvm rvmrc trust'
* update gem 'twitter-bootstrap-rails' to 2.1.8
* update gem 'better_errors' to 0.2.0

h2. 2.2.21 December 9, 2012

* improve 'extras' recipe to add 'better_errors' option
* update gem 'capybara' to 2.0.1
* update 'saas' recipe to add Cucumber test

h2. 2.2.20 December 7, 2012

* revert 'Bundler.with_clean_env' (fix https://github.com/RailsApps/rails-composer/issues/54)

h2. 2.2.19 December 7, 2012

* fix issue #137: when a .railsrc file specifies a database gem, do not add it again
* remove 'bundle update' (unnecessary) and add 'Bundler.with_clean_env do' to avoid gem clashes
* add view helper 'display_base_errors' to accommodate SimpleForm
* update 'saas' recipe to add Rspec and Cucumber tests
* fix 'saas' recipe to add missing file for RSpec tests
* update gem 'ruby_parser' to 3.1.0
* update gem 'zurb-foundation' to 3.2.3
* update gem 'devise_invitable' to 1.1.4
* update gem 'therubyracer' to 0.11.0
* update gem 'twitter-bootstrap-rails' to 2.1.7
* update gem 'mongoid-rspec' to 1.5.5
* update gem 'capybara' to 1.1.4
* update gem 'mongoid' to 3.0.14

h2. 2.2.18 November 8, 2012

* fix 'gems' recipe to include 'database_cleaner' gem when RSpec is selected without Cucumber
* fix 'gems' recipe to add the 'less-rails' gem to accommodate changes to the' twitter-bootstrap-rails' gem
* fix 'views' recipe for 'admin_app' when 'simple_form' is not selected
* fix 'init' recipe for 'admin_app' when 'mongoid' is selected
* fix 'controllers' recipe so OmniAuth can be used with SQL databases as well as Mongoid
* update gem 'mongoid' to 3.0.11
* update gem 'capybara' to 1.1.3
* update gem 'email_spec' to 1.4.0
* update gem 'twitter-bootstrap-rails' to 2.1.6